Changed the content, because the expected string was extracted from the JSON too.

--- a/org.bridgedb.webservice.props
+++ b/org.bridgedb.webservice.props
@@ -1,4 +1,4 @@
 url='http://webservice.bridgedb.org/'
 pkg="org.bridgedb.webservice"
 report='BridgeDbWebserviceWebsite'
-expectedContent='bridgedb webservices'
+expectedContent='Swagger UI'
