--- a/nl.unimaas.bigcat.props
+++ b/nl.unimaas.bigcat.props
@@ -1,4 +1,4 @@
 url='https://www.bigcat.unimaas.nl/'
 pkg="nl.unimaas.bigcat"
 report='BiGCaTWebsite'
-expectedContent='Department of Bioinformatics – BiGCaT'
+expectedContent='Department of Bioinformatics &#8211; BiGCaT'
