--- a/org.bridgedb.vocab.props
+++ b/org.bridgedb.vocab.props
@@ -1,4 +1,4 @@
 url='http://vocabularies.bridgedb.org/'
 pkg="org.bridgedb.vocab"
 report='BridgeDbVocabulariesWebsite'
-expectedContent='The BridgeDb DataSource Ontology'
+expectedContent='BridgeDb DataSource Ontology'
