--- a/org.bridgedb.vocab.ops.props
+++ b/org.bridgedb.vocab.ops.props
@@ -1,4 +1,4 @@
 url='http://vocabularies.bridgedb.org/ops'
-pkg="org.bridgedb.vocab"
+pkg="org.bridgedb.vocab.ops"
 report='BridgeDbOPSVocabulariesWebsite'
 expectedContent='A resource that defines identifiers for some biological entity'
