--- a/org.openphacts.dev.webservice.2.1.json.props
+++ b/org.openphacts.dev.webservice.2.1.json.props
@@ -1,4 +1,4 @@
 url='https://dev.openphacts.org/swagger/spec/ops_2_1.json'
-pkg="org.openphacts.dev.webservice.api2.1.json"
-report='OpenPHACSTAPIWebsite'
+pkg="org.openphacts.dev.webservice"
+report='OpenPHACSTAPI2dot1JSON'
 expectedContent='Returns a list of URIs associated to the input URI'
