--- a/org.openphacts.dev.webservice.2.1.props
+++ b/org.openphacts.dev.webservice.2.1.props
@@ -1,4 +1,4 @@
 url='https://dev.openphacts.org/docs/2.1'
-pkg="org.openphacts.dev.webservice.api2.1"
-report='OpenPHACSTAPIWebsite'
+pkg="org.openphacts.dev.webservice"
+report='OpenPHACSTAPI2dot1Website'
 expectedContent='OpenPHACTS Development Version API Active Docs'
