--- a/org.wikipathways.webservice.call.2.props
+++ b/org.wikipathways.webservice.call.2.props
@@ -1,4 +1,4 @@
 url='https://webservice.bridgedb.org/Human/xrefs/L/1234'
-pkg="org.wikipathways.webservice.calls"
-report='GetXrefs'
+pkg="org.wikipathways.webservice"
+report='APICallGetXrefs'
 expectedContent='Entrez Gene'
