--- a/org.wikipathways.webservice.call.1.props
+++ b/org.wikipathways.webservice.call.1.props
@@ -1,4 +1,4 @@
 url='https://webservice.wikipathways.org/getPathway?pwId=WP1&format=xml'
-pkg="org.wikipathways.webservice.calls"
-report='GetPathwayAsXML'
+pkg="org.wikipathways.webservice"
+report='APICallGetPathwayAsXML'
 expectedContent='getPathwayResponse'
