--- a/org.wikipathways.https.props
+++ b/org.wikipathways.https.props
@@ -1,4 +1,4 @@
 url='https://wikipathways.org/'
-pkg="org.wikipathways.https"
+pkg="org.wikipathways"
 report='MainWikiPathwaysHTTPSWebsite'
 expectedContent='Browse by species and category'
