--- a/org.wikipathways.vocab.wp.props
+++ b/org.wikipathways.vocab.wp.props
@@ -1,4 +1,4 @@
 url='https://vocabularies.wikipathways.org/wp'
-pkg="org.wikipathways.vocab.wp"
+pkg="org.wikipathways.vocab"
 report='WPVocabulariesWebsite'
 expectedContent='binding interaction between two physical entities'
