--- a/org.wikipathways.vocab.gpml.props
+++ b/org.wikipathways.vocab.gpml.props
@@ -1,4 +1,4 @@
 url='https://vocabularies.wikipathways.org/gpml'
-pkg="org.wikipathways.vocab.gpml"
+pkg="org.wikipathways.vocab"
 report='GPMLVocabulariesWebsite'
 expectedContent='connection point on a graphical line or an interaction'
