renamed as a bridgedb webservice check

--- a/org.bridgedb.webservice.call.1.props
+++ b/org.bridgedb.webservice.call.1.props
@@ -1,4 +1,4 @@
 url='https://webservice.bridgedb.org/Human/xrefs/L/1234'
-pkg="org.wikipathways.webservice.calls"
+pkg="org.bridgedb.webservice.calls"
 report='GetXrefs'
 expectedContent='Entrez Gene'
