--- a/org.wikipathways.search.props
+++ b/org.wikipathways.search.props
@@ -1,4 +1,4 @@
 url='https://www.wikipathways.org//index.php?query=WP1&species=Mus+musculus&title=Special%3ASearchPathways&doSearch=1&ids=&codes=&type=query'
 pkg="org.wikipathways"
 report='GetSearchResult'
-expectedContent='Statin Pathway'
+expectedContent="name='query' value='WP1'"
