Updated for the website make over.

--- a/org.bridgedb.props
+++ b/org.bridgedb.props
@@ -1,4 +1,4 @@
 url='http://bridgedb.org/'
 pkg="org.bridgedb"
 report='MainBridgeDbWebsite'
-expectedContent='BridgeDb is a framework'
+expectedContent='Standardised access to Gene'
