--- a/org.bridgedb.webservice.props
+++ b/org.bridgedb.webservice.props
@@ -1,4 +1,4 @@
-url='http://webservice.bridgedb.org/'
+url='https://webservice.bridgedb.org/'
 pkg="org.bridgedb.webservice"
 report='BridgeDbWebserviceWebsite'
 expectedContent='Swagger UI'
