Certificate only works for www.bridgedb.org, not bridgedb.org

--- a/org.bridgedb.props
+++ b/org.bridgedb.props
@@ -1,4 +1,4 @@
-url='https://bridgedb.org/'
+url='https://www.bridgedb.org/'
 pkg="org.bridgedb"
 report='MainBridgeDbWebsite'
 expectedContent='Standardised access to Gene'
