--- a/org.bridgedb.data.props
+++ b/org.bridgedb.data.props
@@ -1,4 +1,4 @@
-url='https://bridgedb.org/data/gene_database/'
+url='https://www.bridgedb.org/data/gene_database/'
 pkg="org.bridgedb.data"
 report='BridgeDbMappingDataWebsite'
 expectedContent='Cf_Derby_Ensembl'
