More interesting expectation

--- a/org.wikipathways.sparql.props
+++ b/org.wikipathways.sparql.props
@@ -1,4 +1,4 @@
 url='http://sparql.wikipathways.org/'
 pkg="org.wikipathways.sparql"
 report='MainWikiPathwaysSPARQLEndPoint'
-expectedContent='Virtuoso SPARQL Query Editor'
+expectedContent='For example SPARQL queries'
