Updated for things that I have given up on seeing change

--- a/nl.unimaas.bigcat.props
+++ b/nl.unimaas.bigcat.props
@@ -1,4 +1,4 @@
-url='https://www.bigcat.unimaas.nl/'
+url='https://www.maastrichtuniversity.nl/research/bioinformatics'
 pkg="nl.unimaas.bigcat"
 report='BiGCaTWebsite'
-expectedContent='Department of Bioinformatics &#8211; BiGCaT'
+expectedContent='Department of Bioinformatics (BiGCaT)'
