Does this one come in time?

--- a/org.wikipathways.browse.props
+++ b/org.wikipathways.browse.props
@@ -1,4 +1,4 @@
 url='https://www.wikipathways.org/index.php/Special:BrowsePathways'
 pkg="org.wikipathways"
 report='WikiPathwaysBrowsePage'
-expectedContent='Apoptosis'
+expectedContent='Acetylcholine'
