Explicit error to test Slack integration

--- a/org.wikipathways.wp2267.props
+++ b/org.wikipathways.wp2267.props
@@ -1,4 +1,4 @@
 url='https://www.wikipathways.org/index.php/Pathway:WP2267'
 pkg="org.wikipathways"
 report='CanDownloadSomeWikiPathway'
-expectedContent='Homo sapiens'
+expectedContent='Homo zapiens'
