--- a/org.pathvisio.props
+++ b/org.pathvisio.props
@@ -1,4 +1,4 @@
-url='http://pathvisio.org/'
+url='https://pathvisio.github.io/'
 pkg="org.pathvisio"
 report='MainPathVisioWebsite'
 expectedContent='PathVisio biological pathway editor'
