Updating test for new description

--- a/org.bridgedb.props
+++ b/org.bridgedb.props
@@ -1,4 +1,4 @@
 url='https://bridgedb.github.io/'
 pkg="org.bridgedb"
 report='MainBridgeDbWebsite'
-expectedContent='Standardised access to Gene'
+expectedContent='mappings are provided for genes, proteins, metabolites'
