--- a/org.wikipathways.webservice.json.props
+++ b/org.wikipathways.webservice.json.props
@@ -1,4 +1,4 @@
 url='https://webservice.wikipathways.org/index.php?swagger'
 pkg="org.wikipathways.webservice"
 report='WikiPathwaysWebserviceJSON'
-expectedContent='"swagger":"2.0"'
+expectedContent='webservice.wikipathways.org'
