--- a/org.wikipathways.browse.props
+++ b/org.wikipathways.browse.props
@@ -1,4 +1,4 @@
-url='https://www.wikipathways.org/index.php/Special:BrowsePathways'
+url='https://www.wikipathways.org/browse/filters.html'
 pkg="org.wikipathways"
 report='WikiPathwaysBrowsePage'
 expectedContent='Filters | WikiPathways'
