Updated for the migration away from wmcloud to github pages/zenodo

--- a/org.wikipathways.data.props
+++ b/org.wikipathways.data.props
@@ -1,4 +1,4 @@
 url='http://data.wikipathways.org/'
 pkg="org.wikipathways.data"
 report='MainWikiPathwaysDownloadPage'
-expectedContent='WikiPathways Data Downloads'
+expectedContent='Monthly Release Archive'
